--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*Configuracion*/
 @font-face {
     font-family: 'GraphikTT';
-    src: url('../assets/GraphikRegular.otf')format('truetype');
+    src: url('assets/GraphikRegular.otf')format('truetype');
     font-style: normal;
     font-weight: normal;
 }
 @font-face {
     font-family: 'GraphikTT';
-    src: url('../assets/GraphikBold.otf')format('truetype');
+    src: url('assets/GraphikBold.otf')format('truetype');
     font-style: normal;
     font-weight: bold;
 }
@@ -278,7 +278,7 @@ h2{
 }
 /*footer*/
 footer{
-    background-image: url('../assets/footerbackground.png');
+    background-image: url('assets/footerbackground.png');
     background-origin: border-box;
     width: 100%;
     background-size: 100% 100%;
