--- a/slider.css
+++ b/slider.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-  background: #eee;
+  /* background: #eee; */
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
@@ -29,7 +29,7 @@ body {
   width: 250px;
   /* height: 200px; */
   border-radius: 30%;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 .swiper-slide img {
