--- a/style.css
+++ b/style.css
@@ -153,6 +153,9 @@ nav li a:hover{
     width: 0;
     height:0;
 }
+.menuMobile{
+    display: none;
+}
 /*contenido*/
 .contenido{
     max-width: 1200px;
@@ -551,15 +554,22 @@ footer{
         background-color: var(--white);
         flex-direction: column;
         padding: 0;
-        margin-top: 45px;
+        margin-top: 60px;
         justify-content: center;
         position: relative;
+        top:auto;
     }
     nav .nav__logo{
         content: url('./assets/logoColor.png');
     }
     .nav__logo2{
-        
+        width:auto;
+        height:auto;
+    }
+    .nav2{
+        top:auto;
+        z-index: 1;
+        height: auto;
     }
     nav ul, .nav__barrita, .nav__logo__p{
         display: none;
@@ -568,7 +578,7 @@ footer{
 
     /*main*/
     .main{
-        margin: 50px 0;
+        margin: 40px 0;
         background: linear-gradient(0deg, rgba(213, 0, 0, 0.8), rgba(213, 0, 0, 0.8)), url('./assets/image\ 1.png');
         background-size: cover;
         color: var(--white);
@@ -738,7 +748,4 @@ footer{
     .static-msj{
         display: none;
     }
-
-
-
 }
